@@ -3,6 +3,7 @@ Unreleased
 Added
     Index to Project Analytics Date Created column to improve load times (#501)
         This migration might be slow to run, be patient
+    Renew LXDMosaic certificate for LXD (#483)
 
 Changed
     SNAP: Update to PHP 7.4
